roles/servers/files/10.32.16.24/iptables
# Generated by iptables-save v1.3.5 on Mon Apr  1 15:17:09 2013
*filter
:INPUT DROP [72:5616]
:FORWARD DROP [0:0]
:OUTPUT DROP [44:4912]
:LOGGING - [0:0]

#default policy for input
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -i eth0 -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT

# Allow incoming and outgoing ssh
-A INPUT -i eth0 -p tcp -s 10.32.5.0/24 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.180 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.100.25 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.179 --dport 22 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp -s 10.32.16.25 --dport 22 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 22 -m state --state NEW -j ACCEPT

#Allow incoming/outgoing ICMP
-A INPUT -i eth0 -p icmp -m limit --limit 2/min --limit-burst 5 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p icmp -m state --state NEW,ESTABLISHED -j ACCEPT

#Allow incoming/outgoing HTTP/S access 
-A INPUT -i eth0 -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 8080 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 8443 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 443 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 8080 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp --dport 8443 -m state --state NEW -j ACCEPT

#Allow Monit
-A INPUT -i eth0 -p tcp --dport 2812 -m state --state NEW -j ACCEPT

#Allow Samba sharing
-A INPUT -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 139 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 445 -j ACCEPT

#Allow connection to DB and Queue server
-A OUTPUT -o eth0 -p tcp -d 10.32.10.7 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.10.9 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.8 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.19 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.10.200 -m state --state NEW -j ACCEPT
#Allow incoming Monit request
-A INPUT -i eth0 -p tcp -s 10.32.16.64/26 --dport 2812 -m state --state NEW -j ACCEPT

#Allow incoming SNMP request
-A INPUT -i eth0 -p udp -s 10.32.16.180 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p udp -s 10.32.16.181 --dport 161 -m state --state NEW -j ACCEPT
-A INPUT -i eth0 -p udp -s 10.32.16.179 --dport 161 -m state --state NEW -j ACCEPT

#Allow access proxy server
-A OUTPUT -o eth0 -p tcp -d 10.32.16.22 --dport 3128 -m state --state NEW -j ACCEPT

##Allow access syslog-ng server
-A OUTPUT -o eth0 -p tcp -d syslog.1rstwap.com --dport 11 -m state --state NEW -j ACCEPT

#Allow access to SMTP relay server
-A OUTPUT -o eth0 -p tcp -d 10.32.16.179 --dport 25 -m state --state NEW -j ACCEPT

#Allow access DNS server and NTP and SYSLOG-NG
-A OUTPUT -o eth0 -p udp -d 10.32.16.238 --dport 53 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p udp -d 10.32.16.238 --dport 123 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.100.18 --dport 11 -m state --state NEW -j ACCEPT

#Allow access to gsm3 server
-A OUTPUT -o eth0 -d 10.32.16.27 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -d 10.32.16.25 -m state --state NEW -j ACCEPT

#Allow access Singasari SMTP
-A OUTPUT -o eth0 -p tcp -d 10.32.10.11 --dport 25 -m state --state NEW -j ACCEPT

#Allow Output to mbsuite
-A OUTPUT -o eth0 -p tcp -d 10.32.10.77 --dport 8081 -m state --state NEW -j ACCEPT
-A OUTPUT -o eth0 -p tcp -d 10.32.10.77 --dport 8181 -m state --state NEW -j ACCEPT

#default policy for output
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT

#default policy for LOGGING 
-A INPUT -j LOGGING
-A LOGGING -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP

COMMIT
# Completed on Mon Apr  1 15:17:09 2013
